手机考试管理

--- a/FTWeb/View_Mobile/UI/KSGL/UI_KSAP.html
+++ b/FTWeb/View_Mobile/UI/KSGL/UI_KSAP.html
@@ -23,7 +23,7 @@
             </header>
             <!-- 工具栏 -->
             <nav class="bar bar-tab">
-                <a class="tab-item  active c-red" external ms-attr-href="ModelData.Status==1?'/View_Mobile/UI/KSGL/UI_USERKS.html?ksapid='+ModelData.ID:'javascript:void(0)'">
+                <a class="tab-item  active c-red" external ms-attr-href="ModelData.Status==1?'/View_Mobile/UI/KSGL/UI_USERKS.html?ksType=1&ksapid='+ModelData.ID:'javascript:void(0)'">
                     {{getstatus(ModelData.Status)}}
                 </a>
             </nav>
