--- a/FTWeb/View_Mobile/UI/KSGL/UI_USERKSLIST.html
+++ b/FTWeb/View_Mobile/UI/KSGL/UI_USERKSLIST.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
     <link rel="stylesheet" type="text/css" href="/View_Mobile/UI/KSGL/css/style.css">
-   
+
 </head>
 <body ms-controller="UI_USERKSLIST">
     <div class="page-group">
@@ -35,17 +35,17 @@
                         <div class="list-block media-list nomargin ">
                             <ul>
                                 <li ms-repeat-item="ListData">
-                                    <a ms-attr-href="/View_Mobile/UI/KSGL/UI_KSAP.html?ksapid={{item.ID}}" class="item-link item-content " external>
+                                    <a ms-attr-href="(item.Status==1&&type==2)?'/View_Mobile/UI/KSGL/UI_SJGL.html?ksapid='+item.ID:'/View_Mobile/UI/KSGL/UI_KSAP.html?ksapid='+item.ID" class="item-link item-content " external>
                                         <div class="item-inner">
                                             <div class="item-title-row">
-                                                <div class="item-title">{{item.KSName}}</div>
+                                                <div class="item-title">{{item.KSName}}{{item.Status==1&&type==2}}</div>
                                                 <div class="item-after c-red">{{getstuName(item)}}</div>
                                             </div>
                                             <div class="item-subtitle c999 ft7"><i class="iconfont icon-shijian"></i>{{item.KSDate|date('yyyy-MM-dd HH:mm')}}</div>
                                         </div>
                                     </a>
                                 </li>
-                                
+
                             </ul>
                         </div>
                         <p class="no-content" ms-if="loadtip"> {{loadtip}}</p>
@@ -65,7 +65,7 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
-    <script src="/View_Mobile/JS/touch/toucher.js"></script> 
+    <script src="/View_Mobile/JS/touch/toucher.js"></script>
     <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
@@ -118,7 +118,7 @@
                 model.page = 1;
                 model.type = type;
                 model.GetList();
-            },getstuName: function (item) {
+            }, getstuName: function (item) {
                 var StatusName = "";
                 switch (item.kszt) {
                     case 1:
