--- a/FTWeb/View_Mobile/UI/KSGL/UI_KSRESULT.html
+++ b/FTWeb/View_Mobile/UI/KSGL/UI_KSRESULT.html
@@ -17,7 +17,7 @@
         <div class="page">
             <!-- 标题栏 -->
             <header class="bar bar-nav" id="bar">
-                <a class="icon icon-left pull-left"></a>
+                <a class="icon icon-left pull-left external"></a>
                 <h1 class="title">{{SJModelInfo.SJName}}</h1>
             </header>
             <!-- 工具栏 -->
@@ -113,7 +113,7 @@
             ksapId: ComFunJS.getQueryString("ksapid", 4),
             numberData: ["一", "二", "三", "四", "五", "六", "七", "八"],
             GetKSPAGE: function () {
-                $.getJSON('/API/VIEWAPI.ashx?Action=KSGL_GETMOBILEYJVIEW', { P2: model.ksapId,P1:'18739915661'}, function (result) {
+                $.getJSON('/API/WXAPI.ashx?Action=KSGL_GETMOBILEYJVIEW', { P2: model.ksapId, P1: '18739915661' }, function (result) {
                     if (result.ErrorMsg == "") {
                         var i = 1;
                         result.Result[0].TXType.forEach(function (item) {
