--- a/FTWeb/ViewV5/Base/UploadTX.html
+++ b/FTWeb/ViewV5/Base/UploadTX.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="/ViewV5/JS/txsc/swfobject.js"></script>
     <script type="text/javascript" src="/ViewV5/JS/txsc/fullAvatarEditor.js"></script>
     <script type="text/javascript" src="/ViewV5/JS/jquery-1.11.2.min.js"></script>
+    <script src="/ViewV5/JS/SZHLCommon.js?jsver=20160915"></script>
 
 </head>
 <body>
