--- a/FTWeb/ViewV5/Base/ppt.html
+++ b/FTWeb/ViewV5/Base/ppt.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/ViewV5/CSS/Office/Doc.css">
     <script src="/ViewV5/JS/jquery-1.11.2.min.js"></script>
     <script src="/ViewV5/JS/jquery.lazyload.min.js"></script>
+    <script src="/ViewV5/JS/SZHLCommon.js?jsver=20160915"></script>
     <script src="/ViewV5/JS/fullteem_ppt.js?v=1.1"></script>
 
     <style>
