--- a/FTWeb/ViewV5/Base/xls.html
+++ b/FTWeb/ViewV5/Base/xls.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/ViewV5/CSS/Office/xls.css">
     <script src="/ViewV5/JS/jquery-1.11.2.min.js"></script>
     <script src="/ViewV5/CSS/bootstrap3.3.5/js/bootstrap.js"></script>
+    <script src="/ViewV5/JS/SZHLCommon.js?jsver=20160915"></script>
     <script src="/ViewV5/JS/fullteem_xls.js"></script>
     <style type="text/css">
         table, tbody, tfoot, thead, tr, th, td {
