--- a/FTWeb/View_Mobile/UI/KSGL/UI_KCGL.html
+++ b/FTWeb/View_Mobile/UI/KSGL/UI_KCGL.html
@@ -58,7 +58,7 @@
                         <div class="course-panel">
                             <ul class="video list-unstyled">
                                 <li class="word-break" ms-repeat-item="KCGLList">
-                                    <a class="J-media-item" ms-attr-href="item.KJType==1?'/ViewV5/Base/showvideo.html?md5='+item.FileMD5:'javascript:void(0)'" target="_blank" external>
+                                    <a class="J-media-item" ms-attr-href="item.KJType==1?'/ViewV5/Base/showvideo.html?id='+modelData.ID+'&md5='+item.FileMD5:'javascript:void(0)'" target="_blank" external>
                                         <i class="iconfont icon-play"></i>{{item.KJName}} <span class="ft7">({{item.KJType==1?"视频":"文档"}})</span>
                                     </a>
                                 </li> 
