--- a/FTWeb/ViewV5/AppPage/APPVIEW.html
+++ b/FTWeb/ViewV5/AppPage/APPVIEW.html
@@ -471,6 +471,12 @@
                                     break;
                             }
                             break
+                        case "kjtype":
+                            switch (str) {
+                                case "1": str = '视频'; break;
+                                case "2": str = '文档'; break;
+                            }
+                            break;
                         default: {
 
                         }
