--- a/FTWeb/ViewV5/AppPage/QYWD/QYWD.html
+++ b/FTWeb/ViewV5/AppPage/QYWD/QYWD.html
@@ -461,7 +461,8 @@
         }, searchContent: "",
         getSearchFile: function () {
             tempindex.FileList.clear();
-            tempindex.FolderList.clear();
+            tempindex.FolderList.clear(); 
+            tempindex.SelItemData.clear();
             if (tempindex.searchContent) {
                 $.getJSON('/API/VIEWAPI.ashx?Action=QYWD_QUERYFILE', {
                     P1: tempindex.itemtype, P2: tempindex.searchContent
